--- a/style.css
+++ b/style.css
@@ -3,18 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  height: 100%;
+}
 body {
   background: linear-gradient(
     90deg,
     rgb(249, 250, 249) 93%,
     rgb(0, 255, 0) 100%
   );
+  /* background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
   color: rgb(8, 0, 0);
   display: flex;
   flex-direction: column;
   height: 100vh;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 header {
@@ -32,8 +38,8 @@ h2 {
 
 h2 {
   font-family: serif;
- font-size: 2.8rem;
- font-weight: 400;
+  font-size: 2.8rem;
+  font-weight: 400;
 }
 
 .contact {
@@ -48,17 +54,32 @@ ul {
 }
 a {
   text-decoration: none;
+  font-family: Roboto, sans-serif;
   color: rgb(65, 245, 0);
   transition: color 0.3s ease-in-out;
-  cursor: inherit;
 }
 
-h1:hover,
-h2:hover,
 a:hover {
-  color: #ff00ff;
+  color: rgb(255, 0, 255);
 }
 
+#cursor-circle {
+  position: fixed;
+  border-radius: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  pointer-events: none;
+  left: -100px;
+  top: 50%;
+  mix-blend-mode: color;
+  /* mix-blend-mode: exclusion; */
+  /* mix-blend-mode: difference; */
+  z-index: 10000;
+  background-color: rgb(252, 0, 255);
+
+  height: 30px;
+  width: 30px;
+  transition: all 30ms ease-out;
+}
 
 @media (max-width: 600px) {
   h1,
@@ -66,10 +87,9 @@ a:hover {
     font-size: 1.5em;
   }
 
-
-ul {
-  flex-direction: column;
-  display: flex;
-  justify-content: space-between;
-}
+  ul {
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+  }
 }
