--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 html {
   height: 100%;
+  cursor: none;
 }
 body {
   background: linear-gradient(
@@ -12,30 +13,28 @@ body {
     rgb(249, 250, 249) 93%,
     rgb(0, 255, 0) 100%
   );
-  /* background-attachment: fixed;
+  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: 100% 100%; */
+  background-size: 100% 100%;
   color: rgb(8, 0, 0);
   display: flex;
   flex-direction: column;
   height: 100vh;
   font-size: 1rem;
-  cursor: pointer;
 }
 
 header {
   margin: 5rem 0 0 5rem;
 }
-
 h1,
 h2 {
-  font-size: 2.5rem;
-  font-weight: inherit;
   color: rgb(65, 245, 0);
+}
+h1 {
   font-family: Roboto, sans-serif;
+  font-size: 2.5rem;
   font-weight: 500;
 }
-
 h2 {
   font-family: serif;
   font-size: 2.8rem;
@@ -75,16 +74,34 @@ a:hover {
   /* mix-blend-mode: difference; */
   z-index: 10000;
   background-color: rgb(252, 0, 255);
-
   height: 30px;
   width: 30px;
   transition: all 30ms ease-out;
 }
 
 @media (max-width: 600px) {
-  h1,
+  html {
+    cursor: auto;
+  }
+
+  #cursor-circle {
+    display: none;
+  }
+
+  header,
+  .contact {
+    margin: 2rem 0 0 2rem;
+  }
+
+  h1 {
+    font-family: Roboto, sans-serif;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
   h2 {
-    font-size: 1.5em;
+    font-family: serif;
+    font-size: 1.8rem;
+    font-weight: 400;
   }
 
   ul {
