--- a/style.css
+++ b/style.css
@@ -5,17 +5,21 @@
 }
 html {
   height: 100%;
-  cursor: none;
+  cursor: default;
 }
+
 body {
   background: linear-gradient(
-    90deg,
-    rgb(249, 250, 249) 93%,
+    to right,
+    rgb(249, 250, 249) 0,
+    rgb(249, 250, 249) calc(100% - 30px),
+    rgb(0, 255, 0) calc(100% - 7px),
     rgb(0, 255, 0) 100%
   );
-  background-attachment: fixed;
+  /* background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 100% 100%; */
+
   color: rgb(8, 0, 0);
   display: flex;
   flex-direction: column;
@@ -59,23 +63,31 @@ a {
 }
 
 a:hover {
-  color: rgb(248, 169, 248);
+  color: rgb(255, 0, 255, 0.6);
 }
 
 #cursor-circle {
   position: fixed;
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
   transform: translateX(-50%) translateY(-50%);
   pointer-events: none;
+  background: radial-gradient(
+    circle,
+    rgb(255, 0, 255) 0%,
+    rgba(255, 0, 255, 0.6) 50%,
+    rgba(255, 0, 255, 0) 100%
+  );
+  mix-blend-mode: hue; /* verändert Farbton darunter */
   left: -100px;
   top: 50%;
-  mix-blend-mode: color;
+  /* mix-blend-mode: color; */
   /* mix-blend-mode: exclusion; */
   /* mix-blend-mode: difference; */
+
   z-index: 10000;
-  background-color: rgb(255, 0, 255);
-  height: 30px;
-  width: 30px;
+
   transition: all 30ms ease-out;
 }
 
