--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ ul {
   list-style: none;
   flex-direction: row;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 a {
   text-decoration: none;
