--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a:hover {
     display: none;
   }
 
-  header {
+  .intro {
     padding: 5rem 0 0 4rem;
   }
 
@@ -121,7 +121,9 @@ a:hover {
 
   ul {
     flex-direction: column;
-    display: flex;
-    justify-content: space-between;
+  }
+
+  ul :nth-child(2) {
+    padding: 0.5rem 1rem;
   }
 }
